--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
         text-align: center;
         color: white;
         font-family: Arial, Helvetica, sans-serif;
+        
   }
   
   h2 {
@@ -20,17 +21,18 @@ body {
   }
   
   .card {
-        width: 190px;
-        height: 120px;
-        background: #07182E;
-        position: relative;
-        display: flex;
-        place-content: center;
-        place-items: center;
-        overflow: hidden;
-        border-radius: 20px;
-        text-align: center;
-        float:inline-start;
+    width: 11.875em;
+    height: 7.5em;
+    background: rgb(7, 24, 46);
+    position: relative;
+    display: flex;
+    place-content: center;
+    place-items: center;
+    overflow: hidden;
+    border-radius: 20px;
+    text-align: center;
+    float: left;
+    margin-left: 20%;
   }
       
   .card h2 {
@@ -47,7 +49,7 @@ body {
   .card::before {
         content: '';
         position: absolute;
-        width: 1000px;
+        width: 62.5em;
         background-image: linear-gradient(180deg, rgb(0, 183, 255), rgb(255, 48, 255));
         height: 200%;
         animation: rotBGimg 2s linear infinite;
@@ -73,5 +75,5 @@ body {
         border-radius: 15px;
       } 
   
-  #SecondBloc{margin-left: 30px;}
+  #SecondBloc{margin-left: 3%;}
   
